Updated app logo

--- a/src/app/components/misc/app-title/app-title.component.html
+++ b/src/app/components/misc/app-title/app-title.component.html
@@ -1,5 +1,5 @@
 <div class="cont">
-  <img src="/assets/logo.png" class="img" />
+  <img src="/assets/logo.svg" class="img" />
   <span class="text">interes</span>
   <h5 style="margin-top: 20px; font-weight: bold;">{{ 'Dating by personality and interests.' | translate }}</h5>
 </div>
