--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div class="content">
         <div class="home-data">
           <a routerLink="/" style="font-weight: bold; color: #000; font-size: 20px; padding: 5px 0; display: inline-block;">
-            <img src="/assets/logo.png" style="height: 39px;" />
+            <img src="/assets/logo.svg" style="height: 39px;" />
             <span class="align-middle badge badge-pill badge-primary beta-badge">Beta</span>
           </a>
         </div>
