--- a/src/app/components/pages/login-page/login-page.component.html
+++ b/src/app/components/pages/login-page/login-page.component.html
@@ -34,8 +34,13 @@
                required>
         <small small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid">
           <div *ngIf="password.errors.required">{{ 'Invalid password' | translate }}</div>
-          <div *ngIf="password.errors.invalidCredentials">{{ 'Invalid email or password' | translate }}</div>
           <div *ngIf="password.errors.serverError">Server error.</div>
+        </small>
+      </div>
+
+      <div class="form-group inp-cont">
+        <small small class="text-danger" *ngIf="loginForm.errors?.invalidCredentials">
+          {{ 'Invalid email or password' | translate }}
         </small>
       </div>
 
