Changed looking for translations

--- a/src/app/components/pages/user-page/user-page.component.html
+++ b/src/app/components/pages/user-page/user-page.component.html
@@ -298,7 +298,7 @@
               <div class="user-info-item">
                 <fa-icon [icon]="faLookingFor" class="info-icon"></fa-icon>
                 <span class="info-text">
-                  {{ user.gender + ':looking_for' | translate }} {{ 'wants' | translate }}
+                  {{ user.gender + ':wants' | translate }} {{ 'looks for' | translate }}
                   {{ user.interested_in + ':wants' | translate }}
                 </span>
               </div>
