--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,7 +62,7 @@
       </a>
       <a routerLink="/compatibilities" class="item">
         <fa-icon [icon]="faCompatibility"></fa-icon>
-        {{ 'Compatibility' | translate }} <span *ngIf="compatibilityCount && 0 < compatibilityCount">({{ compatibilityCount }})</span>
+        {{ 'Compatibility' | translate }} <span *ngIf="compatibilityCount && 0 < compatibilityCount" style="font-size: 15px; vertical-align: middle;">({{ compatibilityCount }})</span>
       </a>
     </div>
   </div>
