--- a/src/app/components/pages/matches-page/matches-page.component.html
+++ b/src/app/components/pages/matches-page/matches-page.component.html
@@ -1,4 +1,5 @@
 <h1>{{ 'Matches' | translate }}</h1>
+<h5>{{ 'People with whom you have like each other and matched.' | translate }}</h5>
 
 <loader *ngIf="loading"></loader>
 <div *ngIf="!loading && 0 === users.length">
