--- a/src/app/components/modal-gallery/modal-gallery.component.html
+++ b/src/app/components/modal-gallery/modal-gallery.component.html
@@ -1,4 +1,4 @@
-<div id="myModal" class="modal" (click)="close()" #lightboxDialog>
+<div class="modal" (click)="close()" #lightboxDialog>
   <span class="close cursor" (click)="close()">&times;</span>
   <div class="modal-content" (click)="$event.stopPropagation()">
 
