--- a/src/app/components/audio-player/audio-player.component.html
+++ b/src/app/components/audio-player/audio-player.component.html
@@ -8,7 +8,7 @@
        ></audio>
 
 <div style="position: relative; ">
-  <progress id="seekbar" value="0" max="1" style="width: 100%; height: 30px" #audiobar></progress>
+  <progress value="0" max="1" style="width: 100%; height: 30px" #audiobar></progress>
   <fa-icon *ngIf="!playing" [icon]="faPlay" class="media-btn play-btn" style="top: 5px;"></fa-icon>
   <fa-icon *ngIf="playing" [icon]="faPause" class="media-btn play-btn" style="top: 5px;"></fa-icon>
 
