--- a/src/app/components/modals/like-modal/like-modal.component.html
+++ b/src/app/components/modals/like-modal/like-modal.component.html
@@ -1,6 +1,6 @@
 <ng-template #content let-modal>
   <div class="modal-body">
-    <h4 class="modal-title" id="modal-basic-title">{{ 'Like' | translate }} {{ params.userName }}</h4>
+    <h4 class="modal-title">{{ 'Like' | translate }} {{ params.userName }}</h4>
     <div class="form-group">
       <div style="margin-top: 15px;">
         <textarea class="form-control" style="border: 0; min-height: 150px;"
