--- a/src/app/components/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.html
@@ -18,7 +18,7 @@
   <div class="onboarding-step-cont border shadow-sm">
     <form [formGroup]="accountInfoForm">
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'Name' | translate }}</label>
+        <label class="col-sm-2 col-form-label">{{ 'Name' | translate }}</label>
         <div class="col-sm-10">
           <div class="radio">
             <input class="form-control" type="text" name="name" formControlName="name"
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="form-group row">
-            <label for="inputPassword" class="col-sm-4 col-form-label">{{ 'I am' | translate }}</label>
+            <label class="col-sm-4 col-form-label">{{ 'I am' | translate }}</label>
             <div class="col-sm-8">
               <div class="radio">
                 <label><input type="radio" value="male" name="gender" formControlName="gender">{{ 'Male' | translate }}</label>
@@ -53,7 +53,7 @@
         </div>
         <div class="col-sm-6">
           <div class="form-group row">
-            <label for="inputPassword" class="col-sm-4 col-form-label">{{ 'Looking for' | translate }}</label>
+            <label class="col-sm-4 col-form-label">{{ 'Looking for' | translate }}</label>
             <div class="col-sm-8">
               <div class="radio">
                 <label><input type="radio" value="male" name="interested_in"
@@ -75,7 +75,7 @@
       </div>
 
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'Birthday' | translate }}</label>
+        <label class="col-sm-2 col-form-label">{{ 'Birthday' | translate }}</label>
         <div class="col-sm-10">
           <date-picker [date]="birthday.value" (dateChange)="dateChange($event)" (changed)="birthday.markAsDirty()"></date-picker>
           <div>
@@ -88,7 +88,7 @@
       </div>
 
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'From' | translate}}</label>
+        <label class="col-sm-2 col-form-label">{{ 'From' | translate}}</label>
         <div class="col-sm-10">
           <div class="radio">
             <location-select [location]="location" (locationChanged)="locationChanged($event)"></location-select>
@@ -112,7 +112,7 @@
   <div class="onboarding-step-cont border shadow-sm">
     <form [formGroup]="aboutForm">
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'Title' | translate }}</label>
+        <label class="col-sm-2 col-form-label">{{ 'Title' | translate }}</label>
         <div class="col-sm-10">
           <div class="radio">
             <input class="form-control" type="text" name="title" formControlName="title"
@@ -127,7 +127,7 @@
       </div>
 
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'About' | translate }}</label>
+        <label class="col-sm-2 col-form-label">{{ 'About' | translate }}</label>
         <div class="col-sm-10">
           <div class="radio">
             <textarea class="form-control" name="description" formControlName="description" style="min-height: 100px;"
@@ -155,7 +155,7 @@
       <h3>{{ 'Appearance' | translate }}</h3>
       <div class="row">
         <div class="col-sm-6">
-          <label for="inputPassword">{{ 'Body type' | translate }}</label>
+          <label>{{ 'Body type' | translate }}</label>
           <div class="radio">
             <label><input type="radio" value="not_tell" name="body" formControlName="body">{{ 'Rather not tell' | translate }}</label>
           </div>
@@ -194,10 +194,48 @@
 
       <hr/>
 
+      <h3>{{ 'About' | translate }}</h3>
+      <div class="row field-row-sep">
+        <div class="col-sm-6">
+          <label class="col-sm-3 col-form-label">{{ 'Personality' | translate }}</label>
+          <div class="radio">
+            <label><input type="radio" value="not_tell" name="personality" formControlName="personality">{{ 'Rather not tell' | translate }}</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="introvert" name="personality" formControlName="personality">{{ 'Introvert' | translate }}</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="extrovert" name="personality" formControlName="personality">{{ 'Extrovert' | translate }}</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="mixed" name="personality" formControlName="personality">{{ 'Mixed' | translate }}</label>
+          </div>
+          <div>
+            <small *ngIf="personality.invalid && (personality.dirty || personality.touched)" class="text-danger">
+              {{ 'Required field' | translate }}
+            </small>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <label class="col-sm-3 col-form-label">{{ 'Zodiac' | translate }}</label>
+          <select class="form-control" formControlName="zodiac">
+            <option value="not_tell">{{ 'Rather not tell' | translate }}</option>
+            <option *ngFor="let sign of zodiacs" [value]="sign.value">{{ sign.label | translate }}</option>
+          </select>
+          <div>
+            <small *ngIf="zodiac.invalid && (zodiac.dirty || zodiac.touched)" class="text-danger">
+              {{ 'Required field' | translate }}
+            </small>
+          </div>
+        </div>
+      </div>
+
+      <hr/>
+
       <h3>{{ 'Lifestyle' | translate }}</h3>
       <div class="row field-row-sep">
         <div class="col-sm-6">
-          <label for="inputPassword">{{ 'Smoking' | translate }}</label>
+          <label>{{ 'Smoking' | translate }}</label>
           <div class="radio">
             <label><input type="radio" value="not_tell" name="smoking" formControlName="smoking">{{ 'Rather not tell' | translate }}</label>
           </div>
@@ -217,7 +255,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <label for="inputPassword">{{ 'Drinking' | translate }}</label>
+          <label>{{ 'Drinking' | translate }}</label>
           <div class="radio">
             <label><input type="radio" value="not_tell" name="drinking" formControlName="drinking">{{ 'Rather not tell' | translate }}</label>
           </div>
@@ -243,8 +281,7 @@
       <h3>{{ 'Family' | translate }}</h3>
       <div class="row field-row-sep">
         <div class="col-sm-6">
-          <label for="inputPassword">{{ 'Do you have children?' | translate }}</label>
-
+          <label>{{ 'Do you have children?' | translate }}</label>
           <div class="radio">
             <label><input type="radio" value="not_tell" name="children_status" formControlName="children_status">{{ 'Rather not tell' | translate }}</label>
           </div>
@@ -268,7 +305,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <label for="inputPassword">{{ 'Do you have pets?' | translate }}</label>
+          <label>{{ 'Do you have pets?' | translate }}</label>
           <div class="radio">
             <label><input type="radio" value="not_tell" name="pet_status" formControlName="pet_status">{{ 'Rather not tell' | translate }}</label>
           </div>
@@ -297,7 +334,7 @@
       <h3>{{ 'Work & Education' | translate }}</h3>
       <div class="row field-row-sep">
         <div class="col-sm-6">
-          <label for="inputPassword" class="col-form-label">{{ 'Work' | translate }}</label>
+          <label class="col-form-label">{{ 'Work' | translate }}</label>
           <div class="radio">
             <label><input type="radio" value="not_tell" name="employment_status" formControlName="employment_status">{{ 'Rather not tell' | translate }}</label>
           </div>
@@ -326,7 +363,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <label for="inputPassword" class="col-form-label">{{ 'Education' | translate }}</label>
+          <label class="col-form-label">{{ 'Education' | translate }}</label>
           <div class="radio">
             <label><input type="radio" value="not_tell" name="education_status" formControlName="education_status">{{ 'Rather not tell' | translate }}</label>
           </div>
@@ -434,7 +471,7 @@
   <div *ngIf="!showQuizIntroText && !quizComplete" style="padding: 25px;" class="onboarding-step-cont border shadow-sm">
     <form [formGroup]="quizForm">
       <div *ngFor="let question of stepQustions(quizStep); let ix = index" class="form-group">
-        <label for="inputPassword">
+        <label>
           {{ question.text | translate }}
         </label>
         <div style="margin-bottom: 25px; margin-left: 20px;">
