--- a/src/app/components/pages/user-page/user-page.component.html
+++ b/src/app/components/pages/user-page/user-page.component.html
@@ -318,7 +318,7 @@
 
   <ng-template #imageUploadModal let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">{{ 'Image upload' | translate }}</h4>
+      <h4 class="modal-title">{{ 'Image upload' | translate }}</h4>
       <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <span aria-hidden="true">×</span>
       </button>
@@ -438,7 +438,7 @@
     <div class="modal-body">
       <div class="form-group">
         <label for="reason">{{ 'Reason' | translate }}</label>
-        <select id="reason" class="form-control" #reportType>
+        <select  class="form-control" #reportType>
           <option value="inappropriate">{{ 'Inappropriate content' | translate }}</option>
           <option value="abusive">{{ 'Abusive language' | translate }}</option>
           <option value="scam">{{ 'Running a scam' | translate }}</option>
@@ -450,7 +450,7 @@
 
       <div class="form-group required">
         <label class="control-label" for="details">{{ 'Details' | translate }}</label>
-        <textarea id="details" class="form-control" placeholder="{{ 'Give us more details..' | translate }}"
+        <textarea class="form-control" placeholder="{{ 'Give us more details..' | translate }}"
           [(ngModel)]='reportDetails'></textarea>
       </div>
       <button class="btn btn-outline-primary" (click)="sendReport(reportType.value)"
@@ -462,7 +462,7 @@
   <ng-template #editAnswerDialog let-modal>
     <div class="modal-body">
       <div class="form-group">
-        <select class="form-control" id="exampleFormControlSelect1" (change)="editingQuestion.questionId = $event.target.value">
+        <select class="form-control" (change)="editingQuestion.questionId = $event.target.value">
           <option *ngFor="let question of allProfileQuestions[editingQuestion.categoryId]"
                   [selected]="question.question_id == editingQuestion.questionId"
                   [value]="question.question_id"
