terms and privacy links and updated styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,80 +1,91 @@
-<div class="page-cont">
-  <div *ngIf="isLoggedIn">
-    <div class="header shadow-sm">
-      <div class="content">
-        <div class="home-data">
-          <a routerLink="/" style="font-weight: bold; color: #000; font-size: 20px; padding: 5px 0; display: inline-block;">
-            <img src="/assets/logo.svg" style="height: 39px;" />
-            <span class="align-middle badge badge-pill badge-primary beta-badge">Beta</span>
+<div *ngIf="isLoggedIn">
+  <div class="header shadow-sm">
+    <div class="content">
+      <div class="home-data">
+        <a routerLink="/" style="font-weight: bold; color: #000; font-size: 20px; padding: 5px 0; display: inline-block;">
+          <img src="/assets/logo.svg" style="height: 39px;" />
+          <span class="align-middle badge badge-pill badge-primary beta-badge">Beta</span>
+        </a>
+      </div>
+      <div class="user-data">
+        <a *ngIf="isActiveUser" class="header-item" [routerLink]="['/user/' + loggedUser().id]">
+          <fa-icon class="primary-item" [icon]="faProfile" title="{{ 'My profile' | translate }}"></fa-icon>
+        </a>
+        <a *ngIf="isActiveUser" class="header-item" routerLink="/chat" style="position: relative;" title="{{ 'Chat' | translate}}">
+          <fa-icon class="primary-item" [icon]="faEnvelope"></fa-icon>
+          <span *ngIf="notifsCount.msg > 0" class="badge rounded-pill bg-danger" style="top: 8px; right: -8px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.msg}}</span>
+        </a>
+        <a *ngIf="isActiveUser" class="header-item" routerLink="/notifications" style="position: relative;" title="{{ 'Notifications' | translate }}">
+          <fa-icon class="primary-item" [icon]="faBell"></fa-icon>
+          <span *ngIf="notifsCount.notif > 0" class="badge rounded-pill bg-danger" style="top: 8px; right: -8px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.notif}}</span>
+        </a>
+        <div class="btn-group">
+          <a data-toggle="dropdown" class="header-item" style="width: 15px; cursor: pointer;">
+            <fa-icon class="primary-item" [icon]="faEllipsisV"></fa-icon>
           </a>
-        </div>
-        <div class="user-data">
-          <a *ngIf="isActiveUser" class="header-item" [routerLink]="['/user/' + loggedUser().id]">
-            <fa-icon class="primary-item" [icon]="faProfile" title="{{ 'My profile' | translate }}"></fa-icon>
-          </a>
-          <a *ngIf="isActiveUser" class="header-item" routerLink="/chat" style="position: relative;" title="{{ 'Chat' | translate}}">
-            <fa-icon class="primary-item" [icon]="faEnvelope"></fa-icon>
-            <span *ngIf="notifsCount.msg > 0" class="badge rounded-pill bg-danger" style="top: 8px; right: -8px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.msg}}</span>
-          </a>
-          <a *ngIf="isActiveUser" class="header-item" routerLink="/notifications" style="position: relative;" title="{{ 'Notifications' | translate }}">
-            <fa-icon class="primary-item" [icon]="faBell"></fa-icon>
-            <span *ngIf="notifsCount.notif > 0" class="badge rounded-pill bg-danger" style="top: 8px; right: -8px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.notif}}</span>
-          </a>
-          <div class="btn-group">
-            <a data-toggle="dropdown" class="header-item" style="width: 15px; cursor: pointer;">
-              <fa-icon class="primary-item" [icon]="faEllipsisV"></fa-icon>
+          <div class="dropdown-menu" style="margin-top: -10px;">
+            <a *ngIf="isActiveUser" class="dropdown-item" routerLink="/settings">
+              <fa-icon [icon]="faSettings"></fa-icon>
+              {{ 'Settings' | translate }}
             </a>
-            <div class="dropdown-menu" style="margin-top: -10px;">
-              <a *ngIf="isActiveUser" class="dropdown-item" routerLink="/settings">
-                <fa-icon [icon]="faSettings"></fa-icon>
-                {{ 'Settings' | translate }}
-              </a>
-              <a class="dropdown-item" (click)="openFeedbackModal(feedbackDialog)">
-                <fa-icon [icon]="faFeedback"></fa-icon>
-                {{ 'Feedback' | translate }}
-              </a>
-              <a class="dropdown-item" (click)="logout()">
-                <fa-icon [icon]="faLogout"></fa-icon>
-                {{ 'Logout' | translate }}
-              </a>
-            </div>
+            <a class="dropdown-item" (click)="openFeedbackModal(feedbackDialog)">
+              <fa-icon [icon]="faFeedback"></fa-icon>
+              {{ 'Feedback' | translate }}
+            </a>
+            <a class="dropdown-item" (click)="logout()">
+              <fa-icon [icon]="faLogout"></fa-icon>
+              {{ 'Logout' | translate }}
+            </a>
           </div>
         </div>
       </div>
     </div>
-
-    <div *ngIf="isActiveUser" class="left-menu">
-      <a routerLink="/likes" class="item">
-        <fa-icon [icon]="faIntro"></fa-icon>
-        {{ 'Likes' | translate }} <span *ngIf="notifsCount.intro > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.intro}}</span>
-      </a>
-      <a routerLink="/find-people" class="item">
-        <fa-icon [icon]="faFindPeople"></fa-icon>
-        {{ 'Find people' | translate}}
-      </a>
-      <a routerLink="/matches" class="item">
-        <fa-icon [icon]="faMatch"></fa-icon>
-        {{ 'Matches' | translate }}
-      </a>
-      <a routerLink="/views" class="item">
-        <fa-icon [icon]="faViews"></fa-icon>
-        {{ 'Views' | translate }}
-      </a>
-      <a routerLink="/compatibilities" class="item">
-        <fa-icon [icon]="faCompatibility"></fa-icon>
-        {{ 'Compatibility' | translate }} <span *ngIf="compatibilityCount && 0 < compatibilityCount" style="font-size: 15px; vertical-align: middle;">({{ compatibilityCount }})</span>
-      </a>
-    </div>
   </div>
 
-  <div class="page-container">
-    <div *ngIf="isActiveUser && showVerifyAlert" class="alert alert-warning" role="alert" style="position: relative;">
-      <a href="javascript:void(0)" (click)="openVerifyModal()" style="color: #4798b5;">
-        {{ 'Verify yourself' | translate }}
-      </a> {{ 'and show that it is really you!' | translate }}
-      <fa-icon [icon]="faClose" style="font-size: 25px; position: absolute; right: 5px; top: 5px;" (click)="hideVerifyAlert()"></fa-icon>
+  <div *ngIf="isActiveUser" class="left-menu">
+    <a routerLink="/likes" class="item">
+      <fa-icon [icon]="faIntro"></fa-icon>
+      {{ 'Likes' | translate }} <span *ngIf="notifsCount.intro > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.intro}}</span>
+    </a>
+    <a routerLink="/find-people" class="item">
+      <fa-icon [icon]="faFindPeople"></fa-icon>
+      {{ 'Find people' | translate}}
+    </a>
+    <a routerLink="/matches" class="item">
+      <fa-icon [icon]="faMatch"></fa-icon>
+      {{ 'Matches' | translate }}
+    </a>
+    <a routerLink="/views" class="item">
+      <fa-icon [icon]="faViews"></fa-icon>
+      {{ 'Views' | translate }}
+    </a>
+    <a routerLink="/compatibilities" class="item">
+      <fa-icon [icon]="faCompatibility"></fa-icon>
+      {{ 'Compatibility' | translate }} <span *ngIf="compatibilityCount && 0 < compatibilityCount" style="font-size: 15px; vertical-align: middle;">({{ compatibilityCount }})</span>
+    </a>
+  </div>
+</div>
+
+<div class="page-container" style="padding-bottom: 75px; position: relative;">
+  <div *ngIf="isActiveUser && showVerifyAlert" class="alert alert-warning" role="alert" style="position: relative;">
+    <a href="javascript:void(0)" (click)="openVerifyModal()" style="color: #4798b5;">
+      {{ 'Verify yourself' | translate }}
+    </a> {{ 'and show that it is really you!' | translate }}
+    <fa-icon [icon]="faClose" style="font-size: 25px; position: absolute; right: 5px; top: 5px;" (click)="hideVerifyAlert()"></fa-icon>
+  </div>
+
+  <router-outlet></router-outlet>
+</div>
+
+<div style="position: absolute; bottom: 0; width: 100%;">
+  <div style="margin: auto; max-width: 840px; display: flex; justify-content: flex-end;">
+    <div class="terms-cont">
+      <a [href]="termsAndUsageUrl" target="_blank">{{ 'Terms of Usage' | translate }}</a>
+      <a [href]="privacyPolicyUrl" target="_blank">{{ 'Privacy Policy' | translate }}</a>
+      <div style="cursor: default;">
+        © Vinteres 2021
+      </div>
     </div>
-    <router-outlet></router-outlet>
   </div>
 </div>
 
