--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -100,6 +100,24 @@ $contentWidth: 1000px
   margin: auto
   margin-top: 60px
 
+.page-container:after
+  display: block
+  content: ""
+  clear: both
+
+.terms-cont
+  padding: 10px
+  font-size: 11px
+  color: #8a8a8a
+  font-weight: 500
+
+  a
+    &:active
+      color: #8a8a8a
+    color: #8a8a8a
+    display: block
+    color
+
 .change-lang
   position: fixed
   bottom: 10px
