--- a/src/styles.sass
+++ b/src/styles.sass
@@ -11,6 +11,7 @@ $borderColor: rgba(46, 62, 72, 0.12)
 
 body
   background-color: #f5f3f0 !important
+  position: relative
 
 *
   box-sizing: border-box
