--- a/src/app/components/pages/chat/messages-page/messages-page.component.sass
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.sass
@@ -9,10 +9,8 @@
   background-color: #f2f2f2
 
 .msg-page-cont
+  position: static
   overflow: hidden
-  position: fixed
-  top: 0
-  bottom: 0
   height: 100%
   width: 840px
 
@@ -20,46 +18,42 @@
     display: none
     font-size: 40px
     cursor: pointer
-    position: absolute
-    top: 0
-    right: 10px
-    z-index: 1
 
   .inner-cont
+    position: static
+    height: calc(100vh - 70px)
     background-color: #fff
-    height: auto
-    position: absolute
-    top: 60px
-    bottom: 10px
-    left: 0px
-    right: 0px
     width: 100%
     overflow: hidden
     border: 1px solid #b0b0b0
+    display: flex
+    flex-direction: row
+    justify-content: space-evenly
+
+  .messages-title-cont
+    overflow: hidden
+    height: 52px
+    padding: 12px 10px
+    font-weight: bold
+    font-size: 18px
+    border-bottom: 1px solid #b0b0b0
 
   .chat-cont
+    margin: 0
     width: 590px
     height: 100%
-    margin-left: 250px
     position: relative
     background-color: #e8e8e8
 
   .chat-members-cont
-    width: 250px
-    height: 100%
     border-right: 1px solid #b0b0b0
-    float: left
+    width: 250px
+    display: inline-flex
+    position: relative
 
-@media only screen and (max-width: 1260px)
-  .msg-page-cont
-    position: static
-
-    .inner-cont
-      position: static
-      height: 100%
-
-    .chat-cont
-      height: 900px
+.chat-members-cont
+  .member-name
+    margin-left: 5px
 
 @media only screen and (max-width: 840px)
   .msg-page-cont
@@ -69,6 +63,15 @@
       width: calc(100% - 250px)
 
 @media only screen and (max-width: 700px)
+  .chat-members-cont
+    width: initial !important
+
+    .member-name
+      display: none
+
+    .messages-title
+      display: none
+
   .msg-page-cont
     .toggle-menu
       display: block
@@ -79,17 +82,3 @@
 
     .chat-members-cont.menu-hidden
       display: none
-
-    .chat-members-cont
-      #display: none
-      float: none
-      height: initial
-      #width: 100%
-      width: 70%
-      height: 100%
-      border-bottom: 1px solid #b0b0b0
-      position: fixed
-      z-index: 10
-      top: 0
-      left: 0
-      background-color: #fff
