User page updates

--- a/src/app/components/pages/chat/messages-page/messages-page.component.html
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.html
@@ -33,7 +33,7 @@
       transform: translateY(-50%);">
         {{ 'No one to chat with. You don\'t have any matches yet.' | translate }}
       </h4>
-      <fa-icon class="toggle-menu" [icon]="faMenuItem" (click)="showMenu($event)"></fa-icon>
+      <!-- <fa-icon class="toggle-menu" [icon]="faMenuItem" (click)="showMenu($event)"></fa-icon> -->
       <router-outlet></router-outlet>
     </div>
   </div>
