--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
   <router-outlet></router-outlet>
 </div>
 
-<div style="position: absolute; bottom: 0; width: 100%;">
+<div *ngIf="isLoggedIn" style="position: absolute; bottom: 0; width: 100%;">
   <div style="margin: auto; max-width: 840px; display: flex; justify-content: flex-end;">
     <div class="terms-cont">
       <a [href]="termsAndUsageUrl" target="_blank">{{ 'Terms of Usage' | translate }}</a>
