--- a/src/app/components/pages/sign-up-page/sign-up-page.component.sass
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.sass
@@ -9,6 +9,10 @@
   -moz-background-size: cover
   -o-background-size: cover
 
+.terms-msg
+  margin-top: 15px
+  font-size: 14px
+
 .overlay
   position: fixed
   top: 0
