Set terms container to be at bottom of page

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -99,6 +99,7 @@ $contentWidth: 1000px
   width: 840px
   margin: auto
   margin-top: 60px
+  min-height: calc(100vh - 100px)
 
 .page-container:after
   display: block
