--- a/src/app/components/pages/chat/messages-page/messages-page.component.html
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.html
@@ -18,7 +18,7 @@
              style="padding: 5px;"
              (click)="changeUser(user)"
              >
-          <img [src]="user.profileImage" class="rounded" style="width: 40px;" />
+          <img [src]="user.profileImage" class="rounded" />
           <span class="member-name">{{ user.name }}</span>
         </div>
       </div>
