--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,23 +45,25 @@
   <div *ngIf="isActiveUser" class="left-menu">
     <a routerLink="/likes" class="item">
       <fa-icon [icon]="faIntro"></fa-icon>
-      {{ 'Likes' | translate }} <span *ngIf="notifsCount.intro > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.intro}}</span>
+      <span class="label">{{ 'Likes' | translate }}</span>
+      <span *ngIf="notifsCount.intro > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.intro}}</span>
     </a>
     <a routerLink="/find-people" class="item">
       <fa-icon [icon]="faFindPeople"></fa-icon>
-      {{ 'Find people' | translate}}
+      <span class="label">{{ 'Find people' | translate }}</span>
     </a>
     <a routerLink="/matches" class="item">
       <fa-icon [icon]="faMatch"></fa-icon>
-      {{ 'Matches' | translate }}
+      <span class="label">{{ 'Matches' | translate }}</span>
     </a>
     <a routerLink="/views" class="item">
       <fa-icon [icon]="faViews"></fa-icon>
-      {{ 'Views' | translate }}
+      <span class="label">{{ 'Views' | translate }}</span>
     </a>
     <a routerLink="/compatibilities" class="item">
       <fa-icon [icon]="faCompatibility"></fa-icon>
-      {{ 'Compatibility' | translate }} <span *ngIf="compatibilityCount && 0 < compatibilityCount" style="font-size: 15px; vertical-align: middle;">({{ compatibilityCount }})</span>
+      <span class="label">{{ 'Compatibility' | translate }}</span>
+      <span *ngIf="compatibilityCount && 0 < compatibilityCount" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{compatibilityCount}}</span>
     </a>
   </div>
 </div>
